<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mutiple_items="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arturomejiamarmol.contacts.addcontacts.AddContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/personal_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@+id/first_name"
                    android:text="@string/first_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_first_name" />

                <TextView
                    android:id="@+id/label_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/last_name"
                    android:text="@string/last_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_last_name" />

                <TextView
                    android:id="@+id/label_date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:labelFor="@+id/date_of_birth"
                    android:text="@string/date_of_birth"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name" />

                <EditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="@string/date_format"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_date_of_birth" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <com.arturomejiamarmol.contacts.view.widgets.MultipleAddressesView
            android:id="@+id/addresses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            mutiple_items:heading_title="@string/addresses"
            mutiple_items:item_hint="@string/address" />

        <com.arturomejiamarmol.contacts.view.widgets.MultipleEmailsView
            android:id="@+id/emails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            mutiple_items:heading_title="@string/email"
            mutiple_items:item_hint="@string/email" />

        <com.arturomejiamarmol.contacts.view.widgets.MultiplePhoneView
            android:id="@+id/phones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            mutiple_items:heading_title="@string/phones"
            mutiple_items:item_hint="@string/phone" />



        <Button
            android:id="@+id/add_new_contact"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_contact" />


    </LinearLayout>


</ScrollView>
