<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:textColor="@android:color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        tools:text="J" />

    <TextView
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="James Smith" />



</LinearLayout>